# floww-backend

./: .env.test  .gitignore  .gitlab-ci.py  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  alembic.ini  centrifugo.json  docker-compose.yml  justfile  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build-and-push.yml  main.yml
app/: __init__.py  conftest.py  factories.py  main.py  models.py  settings.py  shell.py
app/admin/: admin_auth.py  admin_model_views.py
app/alembic/: env.py
app/auth/: __init__.py  oidc.py  provider_base.py
app/jobs/: __init__.py  test_job.py
app/routes/: access.py  admin.py  admin_auth.py  billing.py  centrifugo.py  config.py  dev.py  device_auth.py  docker_proxy.py  executions.py  folders.py  kv_store.py  kv_store_test.py  namespaces.py  namespaces_test.py  oauth.py  organizations.py  organizations_test.py  provider_types.py  provider_types_test.py  providers.py  providers_test.py  runtimes.py  runtimes_test.py  secrets.py  secrets_test.py  service_accounts.py  service_accounts_test.py  subscriptions.py  summary.py  triggers.py  webhooks.py  webhooks_test.py  websocket.py  whoami.py  whoami_test.py  workflow_builder.py  workflow_deployments.py  workflow_deployments_test.py  workflows.py  (+1 more)
app/services/: access_service.py  access_service_test.py  billing_service.py  centrifugo_service.py  crud_helpers.py  default_runtime.py  device_code_service.py  ecr_proxy_service.py  (+13 more)
centrifugo/: Dockerfile  centrifugo.json  entrypoint.sh
e2e_tests/: conftest.py  test_e2e_health.py
infrastructure/: .gitignore
requirements/: additional_requirements_mypy.txt  additional_requirements_test.txt  requirements_app.txt  requirements_local.txt
src/: main.py  models.py  settings.py
stacks/: production.yml  staging.yml
(+92 files in other folders)
